# fritzcert

./: .gitignore  COPYiNG  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
src/fritzcert_cli/: __init__.py  acme.py  config.py  fritzbox.py  main.py  utils.py
