[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fritzcert-cli"
version = "0.1.0"
description = "Automated Let's Encrypt certificate management for multiple Fritz!Box devices (multi-DNS provider)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Jacopo Maria Briccola", email = "jmbriccola@gmail.com" }]
dependencies = ["PyYAML>=6.0", "argcomplete>=2.0"]

[tool.setuptools]
license-files = ["LICENSE", "LICENSE.*", "COPYING*", "NOTICE*"]

[project.urls]
Homepage = "https://github.com/jmbriccola/fritzcert"
Issues = "https://github.com/jmbriccola/fritzcert/issues"

[project.scripts]
fritzcert = "fritzcert_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
